--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<html>
+  <title>
+    Atlanta JayHawks Allstar Cheer
+  </title>
+  
+  <body>
+    <h1> Atlanat JawHaeks is an allstar cheer program that I work and previously cheered at</h1>
+  </body>
+  <style>
+    Body {
+      Background-color:Blue;
+      color:black;
+      text-allign:center;
+    }
+  </style>
+  
+</html>
