--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </title>
   
   <body>
-    <h1> Atlanat JawHaeks is an allstar cheer program that I work and previously cheered at</h1>
+    <h1> Atlanat JawHawks is an allstar cheer program that I work and previously cheered at</h1>
   </body>
   <style>
     Body {
