--- a/index.html
+++ b/index.html
@@ -8,10 +8,34 @@
   </body>
   <style>
     Body {
-      Background-color:Blue;
-      color:black;
+      Background-color:black;
+      color:white;
       text-allign:center;
     }
   </style>
+  <table border="1">
+  <tr>
+    <td>Team Names</td>
+    <td>Levels</td>
+    </tr>
+   <tr>
+     <td>Eclipse</td>
+     <td>Level 1</td>
+    </tr>
+   <tr>
+     <td>
+     <td>Sterling</td>
+     
+     <td>Jade</td>
+     <td>Lighting</td>
+     <td>Arctic</td>
+     <td>Cyclones</td>
+     <td>Royal</td>
+     <td>Moolah</td>
+     <td>Halo</td>
+     <td>Riptide</td>
+     <td>Twilight</td>
+     <td>Denim</td>
+     <td>Shade</td>
   
 </html>
