--- a/index.html
+++ b/index.html
@@ -23,19 +23,53 @@
      <td>Level 1</td>
     </tr>
    <tr>
-     <td>
-     <td>Sterling</td>
-     
-     <td>Jade</td>
-     <td>Lighting</td>
-     <td>Arctic</td>
      <td>Cyclones</td>
-     <td>Royal</td>
-     <td>Moolah</td>
-     <td>Halo</td>
-     <td>Riptide</td>
+     <td>Level 1 </td>
+    </tr>
+   <tr>
+     <td>Sterling</td>
+     <td>Level 2</td>
+    </tr>
+   <tr>
+     <td>Lighting</td>
+     <td>Level 2</td>
+    </tr>
+    <td>Halo</td>
+    <td>Level 2</td>
+    </tr>
+   <tr>
      <td>Twilight</td>
+     <td>Level 2</td>
+    </tr>
+   <tr>
      <td>Denim</td>
-     <td>Shade</td>
+     <td>Level 3</td>
+      </tr>
+   <tr>
+     <td>Riptide</td>
+     <td>Level 3</td>
+      </tr>
+    <tr>
+      <td>Shade</td>
+      <td>Level 3</td>
+       </tr>
+   <tr>
+     <td>Arctic</td>
+     <td>Level 3</td>
+      </tr>
+    <tr>
+      <td>Jade</td>
+      <td>Level 4</td>
+      </tr>
+    <tr>
+      <td>Moolah</td>
+      <td>Level4</td>
+     </tr>
+    <tr>
+      <td>Royal</td>
+      <td>Level 5</td>
+     </tr>
+  </table>
+   
   
 </html>
