--- a/index.html
+++ b/index.html
@@ -13,5 +13,62 @@
       text-allign:center;
     }
   </style>
+  <table border="1">
+  <tr>
+    <td>Team Names</td>
+    <td>Levels</td>
+    </tr>
+   <tr>
+     <td>Eclipse</td>
+     <td>Level 1</td>
+    </tr>
+   <tr>
+     <td>Cyclones</td>
+     <td>Level 1 </td>
+    </tr>
+   <tr>
+     <td>Sterling</td>
+     <td>Level 2</td>
+    </tr>
+   <tr>
+     <td>Lighting</td>
+     <td>Level 2</td>
+    </tr>
+    <td>Halo</td>
+    <td>Level 2</td>
+    </tr>
+   <tr>
+     <td>Twilight</td>
+     <td>Level 2</td>
+    </tr>
+   <tr>
+     <td>Denim</td>
+     <td>Level 3</td>
+      </tr>
+   <tr>
+     <td>Riptide</td>
+     <td>Level 3</td>
+      </tr>
+    <tr>
+      <td>Shade</td>
+      <td>Level 3</td>
+       </tr>
+   <tr>
+     <td>Arctic</td>
+     <td>Level 3</td>
+      </tr>
+    <tr>
+      <td>Jade</td>
+      <td>Level 4</td>
+      </tr>
+    <tr>
+      <td>Moolah</td>
+      <td>Level4</td>
+     </tr>
+    <tr>
+      <td>Royal</td>
+      <td>Level 5</td>
+     </tr>
+  </table>
   
 </html>
