--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   </title>
   
   <body>
-    <h1> Atlanat JawHaeks is an allstar cheer program that I work and previously cheered at</h1>
+    <h1> Atlanta JawHawks an allstar cheer program that I work and previously cheered at</h1>
   </body>
   <style>
     Body {
-      Background-color:Blue;
-      color:black;
+      Background-color:black;
+      color:white;
       text-allign:center;
     }
   </style>
@@ -70,5 +70,6 @@
       <td>Level 5</td>
      </tr>
   </table>
+   
   
 </html>
