--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   </title>
   
   <body>
-    <h1> Atlanta JawHawks Allstar Cheer</h1>
-    <h2> Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
+    <h1 style="background-color:Blue;"> Atlanta JawHawks Allstar Cheer</h1>
+    <p> Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
       With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
-      Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</h2>
+      Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
+    <hr>
   </body>
   <style>
     Body {
