--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </title>
   
   <body>
-    <h1 style="background-color:Blue;"> text-allign:center;Atlanta JawHawks Allstar Cheer</h1>
+    <h1 style="background-color:Blue;"> text-allign:center;Atlanta JayHawks Allstar Cheer</h1>
     <img src="![atl jayhawks](https://user-images.githubusercontent.com/42743336/48682137-b4643580-eb74-11e8-9660-c2224dbfd649.JPG)">
     <p> text-allign:center;Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
       With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
