/Users/katiejones/Documents/ATl Jayhawks.JPG

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   </title>
   
   <body>
+    <h allign center >
     <h1 style="background-color:Blue;">Atlanta JayHawks Allstar Cheer</h1>
+    </h>
     <img src="ATl Jayhawks.JPG">
     <p> text-allign:center;Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
       With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
