--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
     </center>
+    <video width="320" height="240" controls>
+  <source src=ATL JayHawk 2017.MOV type="video/MOV">
+Your browser does not support the video tag.
+</video>
+
     </body>
   <style>
     Body {
@@ -18,6 +23,7 @@
       color:white;
     }
   </style>
+  
   <table border="1">
   <tr>
     <td>Team Names</td>
