--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
     </center>
     <video width="320" height="240" controls>
-  <source src="/Users/katiejones/Downloads/ATL JayHawk 2017.MOV" type="video/MOV">
-  <source src="movie.ogg" type="video/ogg">
+  <source src="ATL JayHawk 2017.MOV" type="video/MOV">
 Your browser does not support the video tag.
 </video>
     </body>
