--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
     </center>
     <video width="320" height="240" controls>
-  <source src="movie.mp4" type="video/mp4">
+  <source src="ATL JayHawk 2017_1.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
   <style>
