--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
       With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
     </center>
-   <video width="320" height="240" controls>
-  <source src="/Users/katiejones/Downloads/ATL Jayhawk_1.mp4" type="video/mp4">
-Your browser does not support the video tag.
 </video>
   <style>
     Body {
@@ -23,6 +20,7 @@ Your browser does not support the video tag.
   </style>
   
   <table border="1">
+    style="margin-top:10px; margin-left:10px;">
   <tr>
     <td>Team Names</td>
     <td>Levels</td>
