--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     }
   </style>
   
-  <table border="1">
-    style="margin-top:10px; margin-left:10px;">
+  <table border="1" style="margin-top:10px; margin-right:10px;">
   <tr>
     <td>Team Names</td>
     <td>Levels</td>
