--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
   </style>
   
-  <table border="1" table align="right;">
+  <table border="1;" table align="right">
   <tr>
     <td>Team Names</td>
     <td>Levels</td>
