--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <body>
     <center>
     <h1 style="background-color:Blue;">Atlanta JayHawks Allstar Cheer</h1>
-    <img src="ATl Jayhawks.JPG">
+    <img src="ATl Jayhawks.JPG" width="500" height="400">
     <p>Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
       With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
-    <img src="IMG_4560.JPG" width="500" height="300" align="left">
+    <img src="IMG_4560.JPG" width="500" height="300">
     </center>
   <style>
     Body {
@@ -18,8 +18,40 @@
       color:white;
     }
   </style>
-  
-  <table border="1;"
+  <table border="3;"
+  table align="left">
+    <tr>
+      <td>Levels</td>
+      <td>Skills</td>
+    </tr>
+   <tr>
+     <td>Level 1</td>
+     <td> Cartwheel,Round-off, Front Walkover 
+       and Back Walkover</td>
+    </tr>
+    <tr>
+      <td>Level 2</td>
+      <td> Standing Back Handsprings and
+        Round-off Back Handsprings</td>
+    </tr>
+    <tr>
+      <td>Level 3</td>
+      <td> Round-off Tucks and
+        Round-off Back Handspring Tucks</td>
+    </tr>
+    <tr>
+      <td>Level 4</td>
+      <td> Standing Tuck and
+        Round-Off Back Handspring Layout</td>
+    </tr>
+    <tr>
+      <td>Level 5</td>
+      <td> Standing Back Handspring Layout and
+        Round-off Back Handspring Full/td>
+    </tr>
+    </table>
+             
+  <table border="3;"
   table align="right">
   <tr>
     <td>Team Names</td>
