--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <body>
     <center>
     <h1 style="background-color:Blue;">Atlanta JayHawks Allstar Cheer</h1>
-    <img src="ATl Jayhawks.JPG">
-    <a href="http://cdaspirit.com">Atlanta JayHawk Official Website align="center"</a>
+    <a <img src="ATl Jayhawks.JPG"> href="http://cdaspirit.com">Atlanta JayHawk Official Website</a>
     <p>Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
       With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
