--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <p>Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
       With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
-    <video src="/Users/katiejones/Downloads/ATL Jayhawk_1.mp4" width="320" height="200" controls preload></video>
+     <a herf="https://www.youtube.com/watch?v=fVq5o4tPqh4"> 
       <img src="IMG_4560.JPG" width="500" height="300">
+      </a>
     </center>
   <style>
     Body {
