--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     }
   </style>
   <table border="3;"
-  table align="left">
+  table align="left"
+   bgcolor="green">
     <tr>
       <td>Levels</td>
-      <td>Skills align="center"</td>
+      <td>
+        <Skills>
+          align="center"</td>
     </tr>
    <tr>
      <td>Level 1</td>
@@ -50,7 +53,7 @@
     <tr>
       <td>Level 5</td>
       <td> Standing Back Handspring Layout and
-        Round-off Back Handspring Full/td>
+        Round-off Back Handspring Full</td>
     </tr>
     </table>
              
