/Users/katiejones/Downloads/ATL Jayhawk final_1.mp4

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
       <img src="IMG_4560.JPG" width="500" height="300">
     </center>
-    <video src="ATL Jayhawk_1.mp4" poster="IMG_4560.JPG" width="320" height="200" controls preload></video>
+    <video src="ATL Jayhawk final_1.mp4" poster="IMG_4560.JPG" width="320" height="200" controls preload></video>
   <style>
     Body {
       Background-color:black;
