--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <a href="http://cdaspirit.com">
       <img src="ATl Jayhawks.JPG" alt="Atlanta JayHawk Official Website">
       </a>
-    <p>Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
-      With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
-      Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
       <video src="ATL Jayhawk final_1.mp4" poster="IMG_4560.JPG" width="420" height="300" controls preload></video>
     </center>
   <style>
@@ -20,6 +17,7 @@
       color:white;
     }
   </style>
+  <p>
   <table border="3;"
   table align="left"
    bgcolor="green">
@@ -55,6 +53,9 @@
         Round-off Back Handspring Full</td>
     </tr>
     </table>
+    Atlanta JayHawks is an allstar cheer program that introdcues tumbling and stunting skills to individuals.
+      With three different gym locations, the facility teaches levels 1-5. In addition, there are 13 Allstar teams, that will travel and compete across the state.
+      Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
              
   <table border="3;"
   table align="right">
