--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
    <video src="ATL Jayhawk final_1.mp4" poster="IMG_4560.JPG" width="420" height="300" align="center" controls preload></video>        
   <table border="3;"
-  table align="right"
+  table align="right" width="200"
          bgcolor="blue">
   <tr>
     <td>Team Names</td>
