--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       <td>Level 5</td>
      </tr>
   </table>
-<p><img src="Katie ATl.jpg" width="320" height="380" Align=”left” Hspace=”50” Vspace=”50”>
+<p><img src="Katie ATl.jpg" width="320" height="380" Align=”left”>
   To the left is a pictue of myself, Katie Jones. This photo was taken at a competition called The Sumit. The Sumit is one of the largest all star cheer competitions held in Orlando, Florida.
   Certain competiitons, prior to this one, award "Sumit bids," which is considered an invitation. Over 12,000 teasm will compete across the nation for this bid, and just over 1,000 teams will actually receive it and get to compete at The Sumit.
   In addition, I curretly work at Atlanta JayHawks, as a tumbling and team coach. Of the current 13 teams, they all have a chance of making it to The Sumit. It will be held in May and hopefully I
