--- a/index.html
+++ b/index.html
@@ -121,4 +121,22 @@
   In addition, I curretly work at Atlanta JayHawks, as a tumbling and team coach. Of the current 13 teams, they all have a chance of making it to The Sumit. It will be held in May and hopefully I
   will be fortunate enough to go again in 2019, supporting all of the JayHawk teams.  
 </p>
+<style>
+<a href="https://tv.varsity.com/events/6075822-2018-the-summit/videos" title="The Sumit">
+  a:link {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:visited {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:hover {
+    color: Blue;
+    background-color: transparent;
+    text-decoration: underline;
+}
+</style>
 </html>
