--- a/index.html
+++ b/index.html
@@ -123,4 +123,20 @@
   will be fortunate enough to go again in 2019, supporting all of the JayHawk teams.  
 </p>
 <a href="https://tv.varsity.com/events/6075822-2018-the-summit/videos" title="The Sumit">
+  a:link {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:visited {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:hover {
+    color: green;
+    background-color: transparent;
+    text-decoration: underline;
+}
+</a>
 </html>
