--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>
-    Atlanta JayHawks Allstar Cheer
+    <b> Atlanta JayHawks Allstar Cheer</b>
   </title>
   
   <body>
@@ -115,12 +115,18 @@
       <td>Level 5</td>
      </tr>
   </table>
+<div style="background-color:white;color:black;padding:20px;">
+  <h2>Personal Cheer Experience</h2>
  <img src="Katie ATl.jpg" width="320" height="380" align="left">
 <p>
-  To the left is a pictue of myself, Katie Jones. This photo was taken at a competition called The Sumit. The Sumit is one of the largest all star cheer competitions held in Orlando, Florida.
+  To the left is a pictue of myself, Katie Jones. I competed as an All-Star cheerleader for seven years. The memories and friends
+  you make are something to cherish forever. I started on a level 3 team and worked my way up to level 5. Stepping on the mat to perform
+  is a feeling that can not be compared. In the end, the goal is to "hit" your routine and know that all the hard work at practice has paid off.
+  For instance, this photo was taken at a competition called The Sumit. The Sumit is one of the largest all star cheer competitions held in Orlando, Florida.
   Certain competiitons, prior to this one, award "Sumit bids," which is considered an invitation. Over 12,000 teasm will compete across the nation for this bid, and just over 1,000 teams will actually receive it and get to compete at The Sumit.
   In addition, I curretly work at Atlanta JayHawks, as a tumbling and team coach. Of the current 13 teams, they all have a chance of making it to The Sumit. It will be held in May and hopefully I
   will be fortunate enough to go again in 2019, supporting all of the JayHawk teams.
 </p>
+ </div>
 <a href="https://tv.varsity.com/events/6075822-2018-the-summit/videos" target="_blank">The Sumit</a>
 </html>
