--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       color:white;
     }
   </style>
+  <div style="background-color:green;color:white;padding:20px;">
   <p>
   <table border="3;"
   table align="left"
-   bgcolor="green">
+   bgcolor="black">
     <tr>
       <center>
       <td>Levels</td>
@@ -56,7 +57,8 @@
       With three different gym locations, the facility teaches levels 1-5. To the left you will see skills that indicate what level your athlete is on. In addition, there are 13 Allstar teams, that will travel and compete across the state. These teams are too listed, followed by their team level.
       Atlanta Jayhawks has been "reppin" for 26 years now and is represented by National Championship titles. Atlanta Jayhawks has built a solid reputation in producing top level athletes in the Cheer World.</p>
    <video src="ATL Jayhawk final_1.mp4" poster="IMG_4560.JPG" width="420" height="300" align="center" controls preload></video>        
-  <table border="3;"
+    </div>
+    <table border="3;"
   table align="right" width="200"
          bgcolor="blue">
   <tr>
@@ -127,6 +129,6 @@
   In addition, I curretly work at Atlanta JayHawks, as a tumbling and team coach. Of the current 13 teams, they all have a chance of making it to The Sumit. It will be held in May and hopefully I
   will be fortunate enough to go again in 2019, supporting all of the JayHawk teams.
 </p>
+  <a href="https://tv.varsity.com/events/6075822-2018-the-summit/videos" target="_blank">The Sumit</a>
  </div>
-<a href="https://tv.varsity.com/events/6075822-2018-the-summit/videos" target="_blank">The Sumit</a>
 </html>
