--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
   <h2>Personal Cheer Experience</h2>
  <img src="Katie ATl.jpg" width="320" height="380" align="left">
 <p>
-  To the left is a pictue of myself, Katie Jones. I competed as an All-Star cheerleader for seven years. The memories and friends
-  you make are something to cherish forever. I started on a level 3 team and worked my way up to level 5. Stepping on the mat to perform
+  To the left is a picture of myself, Katie Jones. I competed as an All-Star cheerleader for seven years. I started on a level 3 team and worked my way up to level 5. Stepping on the mat to perform
   is a feeling that can not be compared. In the end, the goal is to "hit" your routine and know that all the hard work at practice has paid off.
   For instance, this photo was taken at a competition called The Sumit. The Sumit is one of the largest all star cheer competitions held in Orlando, Florida.
   Certain competiitons, prior to this one, award "Sumit bids," which is considered an invitation. Over 12,000 teasm will compete across the nation for this bid, and just over 1,000 teams will actually receive it and get to compete at The Sumit.
@@ -131,4 +130,8 @@
 </p>
   <a href="https://tv.varsity.com/events/6075822-2018-the-summit/videos" target="_blank">The Sumit</a>
  </div>
+<footer>
+  style="background-color:Blue align="center"
+  <p> Atlnata JayHawks the tradition moves along, 26 years still going strong</p>
+</footer>
 </html>
