--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
   <a href="https://tv.varsity.com/events/6075822-2018-the-summit/videos" target="_blank">The Sumit</a>
  </div>
 <footer>
-  style="background-color:Blue align="center"
-  <p> Atlnata JayHawks the tradition moves along, 26 years still going strong</p>
+  <h3> style="background-color:Blue;"> Atlnata JayHawks the tradition moves along, 26 years still going strong</h3>
 </footer>
 </html>
