--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 </p>
   <a href="https://tv.varsity.com/events/6075822-2018-the-summit/videos" target="_blank">The Sumit</a>
  </div>
+<center>
 <footer>
-  <h3> style="background-color:Blue;"> Atlnata JayHawks the tradition moves along, 26 years still going strong</h3>
+  <h3 style="background-color:Blue;"> Atlnata JayHawks the tradition moves along, 26 years still going strong</h3>
 </footer>
+</center>
 </html>
