--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
  </div>
 <center>
 <footer>
-  <h3 style="background-color:Blue;"> Atlnata JayHawks the tradition moves along, 26 years still going strong</h3>
+  <h3 style="background-color:Blue;"> Atlanta JayHawks the tradition moves along, 26 years still going strong</h3>
 </footer>
 </center>
 </html>
