--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
 <center>
 <footer>
   <h3 style="background-color:Blue;"> Atlanta JayHawks the tradition moves along, 26 years still going strong</h3>
+  <p> JayHawks is one of the longest opperating cheer gyms in the state. As it continues to grow, the JayHawk family grows.
+    We work with high morals, as well as expectations, to surround athletes with a great cheer experience.
 </footer>
 </center>
 </html>
